[project]
name = "aws-ipcollector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mateusz Frąk", email = "mateusz.frk@gmail.com" }
]
requires-python = ">=3.11.9"
dependencies = [
    "ipython>=8.29.0",
    "peewee>=3.17.7",
    "progress>=1.6",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
